# LintCodeCPP

./: .gitignore  CMakeLists.txt  LintClass.cpp  LintClass.hpp  LintCodeCPP.cpp  LintCodeCPP.sln  LintCodeCPP.vcxproj  LintCodeCPP.vcxproj.filters  LintCodeConvension.py  LinterNamingConventions.py
.github/workflows/: clang-tidy-windows.yml  linterNamingConventions.yml
